soapserver/environments/soapserver/routes/soapserver-nonsecure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: soapserver-nonsecure
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: soapserver-nonsecure
    weight: 100
  wildcardPolicy: None
